# BA-and-pose-graph-problem

./: CMakeLists.txt  KeyFrame.cpp  KeyFrame.h  NonLinearOptimizer.cpp  Point.h  README.md  Simulator.cpp  Utils.cpp  Utils.h  main.cpp
src/: KeyFrame.cpp  KeyFrame.h  Map.h  NonLinearOptimizer.cpp  NonLinearOptimizer.h  Point.cpp  Simulator.cpp  Simulator.h  Utils.cpp  Utils.h  main.cpp
